# gripper_grasp

./: .gitignore  README.md
.history/flex/: eval_one_grasp_20250828045524.py  eval_one_grasp_20250828045529.py  eval_one_grasp_20250828053650.py  g2_20250822075630.xml  g2_20250822075638.xml  g2_20250822075728.xml  g2_20250822075730.xml  g2_20250822075746.xml  g2_20250822080445.xml  g2_20250822080458.xml  g2_20250822081037.xml  g2_20250822081055.xml  g2_20250822082450.xml  g2_20250822082723.xml  g2_20250822082738.xml  g2_20250822082803.xml  g2_20250822083334.xml  g2_20250822084538.xml  g2_20250822084753.xml  g2_20250822085741.xml  g2_20250822090014.xml  g2_20250828042444.xml  g2_20250828042636.xml  g2_20250828043252.xml  g2_20250828043307.xml  g2_20250828043827.xml  g2_20250828043853.xml  g2_20250828043857.xml  g2_20250828044310.xml  g2_20250828044315.xml  g2_20250828044329.xml  g2_20250828044340.xml  g2_20250828044432.xml  g2_20250828044551.xml  g2_eval_20250828050528.xml  g2_eval_20250828050603.xml  (+934 more)
flex/: 1lego.xml  CMakeLists.txt  MUJOCO_LOG.TXT  g2grasp.py  gen_lego_snippet.py  grasp6d_bbox_sidegrid.py  grasp_eval_results.json  gripper.xml  lego50.xml  lego_drops_100.xml  lego_grid_10x10.xml  lego_worldbody_snippet.xml  mesh2sdf.py  meshtosdf.py  pythontest.py  results.json  rung2.xml  scene.xml  scene1.xml  side_grasps.json  test.py  test.xml  top_grasps.json
flex/mjcf/: lego_unit.xml
flex/scripts/: GraspPlanner.py  MUJOCO_LOG.TXT  antipodal_2_6d.py  g2_gripper.xml  lego.xml  lego_unit.xml  npy_reader.py  visualize_grasps.py
g2/: package.xml
(+520 files in other folders)
